Add kick-ass banner

--- a/views/index.pug
+++ b/views/index.pug
@@ -35,12 +35,14 @@ html(lang="en")
 
 
             //- Main jumbotron for a primary marketing message or call to action
-            div.jumbotron
-                 div.container
-                     h1 Hello, world!
-                     p Welcome to the Durham University Computing Society.
-                     p
-                        a.btn.btn-primary.btn-lg(href="#" role="button") Learn more &raquo;
+            div
+                object(data="../img/newiconbanner1.svg" type="image/svg+xml")
+
+                 //-div.container
+                 //-    h1 Hello, world!
+                 //-    p Welcome to the Durham University Computing Society.
+                 //-    p
+                 //-       a.btn.btn-primary.btn-lg(href="#" role="button") Learn more &raquo;
 
 
 
