--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -6,6 +6,10 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Jura', sans-serif;
 }
 
+object {
+    width: 100%;
+}
+
 .navbar-brand {
     font-family: 'Jura', sans-serif;
     font-weight: 600;
