--- a/views/index.pug
+++ b/views/index.pug
@@ -35,8 +35,8 @@ html(lang="en")
 
 
             //- Main jumbotron for a primary marketing message or call to action
-            div
-                object(data="../img/newiconbanner1.svg" type="image/svg+xml")
+            .banner-container
+                object.banner(data="../img/newiconbanner1.svg" type="image/svg+xml")
 
                  //-div.container
                  //-    h1 Hello, world!
