--- a/views/team.pug
+++ b/views/team.pug
@@ -1,22 +1,21 @@
-//about page
-//created by Soumya on 30-08-2016
+//- Created by Soumya on 01-09-2016
+
+//- See head.pug for css imports etc.
 include ./partials/head.pug
 
-doctype html
+doctype(html)
 html(lang="en")
 
-    //header with page title About-DU CompSoc
-    +head("About")
+    //- add the header with page title DU Compsoc- The Team
+    +head("The Team")
     body
-
-        //content wrapped for sticky footer
+        //- content wrapped for sticky footer
         .wrapper
 
             nav.navbar.navbar-inverse.navbar-fixed-top
                 .container
                     .navbar-header
-                        button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#navbar"
-                        aria-expanded="false" aria-controls="navbar")
+                        button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar")
                             span.sr-only Toggle navigation
                             span.icon-bar
                             span.icon-bar
@@ -26,74 +25,34 @@ html(lang="en")
                         form.navbar-form.navbar-right
                             div.form-group
                                 input.form-control(type="text" placeholder="Email")
-                                input.form-control(type="password" placeholder="Password")
+                                input.form-control(type="text" placeholder="Password")
                                 button.btn.btn-success(type="submit") Sign in
-
-
-            // Main jumbotron
+            //- main jumbotron
             div.jumbotron
-                 div.container
-                      h1 About Us
-                      p Let us introduce ourselves
+                div.container
+                    h1 The Team
+                    p Have a look at the students who help keep the society in shape.
 
             div.container
-                div.row
-                    div.col-md-6
-                        p
-                        p We’re Durham University’s Computing Society – run entirely by students. The university might be very old, but we’re young ! And we look for passionate problem solvers to come together, do stuff and participate in really cool hack-a-thons and tech-events all the year round. Click around to know more about us.
-                    //images carousel (next to the description)
+                 div.row
+                     div.col-md-3
+                         h2 The President
+                         p description
+                     div.col-md-3
+                         h2 The Secretary
+                         p description
+                     div.col-md-3
+                         h2 The Treasurer
+                         p description
+                     div.col-md-3
+                         h2 The Web Officer
+                         p description
 
-                    div.col-md-6
-                        #carousel-images.carousel-slide(data-ride=carousel)
-                        br
-                        ol.carousel-indicators
-                              li.active(data-target="#carousel-images" data-slide-to="0")
-                              li(data-target="#carousel-images" data-slide-to="1")
-                              li(data-target="#carousel-images" data-slide-to="2")
-                              li(data-target="#carousel-images" data-slide-to="3")
-                        //wrapper for slides
-                        div.carousel-inner(role="listbox")
-                        div.item.active
-                            img(src="#" alt="img1" width="230" height="230")
-                        div.item
-                            img(src="#" alt="img2" width="230" height="230")
-                        div.item
-                            img(src="#" alt="img3" width="230" height="230")
-                        div.item
-                            img(src="#" alt="img4" width="230" height="230")
-                        //left and right controls
-
-                        a.left-carousel-control(href="#carousel-images" role="button" data-slide="prev")
-                            span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
-                            span.sr-only Previous
-                        a.right-carousel-control(href="#carousel-images" role="button" data-slide="next")
-                            span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
-                            span.sr-only Next
-                div.row
-                    div.col-md-3
-                        h2 The Team
-                        p Click to know the Who's Who of CompSoc.
-                        p
-                            a.btn.btn-default(href="#" role="button") View details &raquo;
-                    div.col-md-3
-                        h2 What's On
-                        p Click to know what's happening in CompSoc, our past events and upcoming events.
-                        p
-                            a.btn.btn-default(href="#" role="button") View details &raquo;
-                    div.col-md-3
-                        h2 Our Sponsors
-                        p They help us run smoothly and happily :) Click to know more.
-                        p
-                            a.btn.btn-default(href="#" role="button") View details &raquo;
-                    div.col-md-3
-                        h2 Say Hi To Us!
-                        p  Click to get in touch with us by email, social media or leave your valuable feedback and suggestions.
-                        p
-                            a.btn.btn-default(href="#" role="button") View details &raquo;
-            //- http://stackoverflow.com/questions/42294/how-do-you-get-the-footer-to-stay-at-the-bottom-of-a-web-page?noredirect=1&lq=1
+            //- http://stackoverflow.com/questions/42294/how-do-you-get-the-footer-to-stay-at-the-bottom-of-a-web-page?noredirect=1&1q=1
             .push
         .footer
             div &copy; 2016 Durham University CompSoc
+
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
         //-script(window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>'))
 
