--- a/views/events.pug
+++ b/views/events.pug
@@ -33,19 +33,19 @@ html(lang="en")
             div.jumbotron
                 div.container
                     h1 What's On
-                    p We feature tech-events all the year round, from tech-talks to hackathons. So you can have a glimpse inside the life of a techie or meet new people and build some awesome stuff.
-                    p Take a look at what we've done so far and what's coming in.
+                    p We feature tech-events all the year round, from tech-talks to hackathons. You can meet a professional to know what it is really like in the technology industry or build something interesting.
+                    p Take a look at what we have done so far and what is coming in.
 
             div.container
                 //- row contains two columns, each with a description
                 div.row
                      div.col-md-6
-                        h2 What We've Done!
-                        p Here's all events we've conducted in the past.
+                        h2 Past Events
+                        p Here are all events we have conducted in the past.
 
                      div.col-md-6
-                        h2 What Next?
-                        p Mark your calendars for the upcoming events!
+                        h2 Coming Up
+                        p Take a look at the upcoming events.
 
 
             //- http://stackoverflow.com/questions/42294/how-do-you-get-the-footer-to-stay-at-the-bottom-of-a-web-page?noredirect=1&1q=1
