--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -32,7 +32,7 @@ html(lang="en")
       div.jumbotron
         div.container
           h1 Our Sponsors
-          p Here's a big thank you to all who help us grow :)
+          p We thank all our sponsors who have helped us grow.
 
       div.container
         //- contains pictures of our sponsors which act as links to their official websites.
