--- a/views/contact.pug
+++ b/views/contact.pug
@@ -33,15 +33,16 @@ html(lang="en")
             div.jumbotron
                  div.container
                       h1 Say Hi To Us!
-                      p Wanna join us? Welcome, with open arms :)
-                      p Like Us? Have any valuable suggestions? We're all ears!
+                      p Want to join us? We welcome everyone.
+                      p Like Us? Have any valuable suggestions? We are all ears.
 
             div.container
                  //- row contains four columns, each with a description
                  div.row
                       div.col-md-3
                           h2 Join Us
-                          p Whether you're a cyber genius or have never touched the keyboard, we welcome everyone.
+                          p
+                          p Whether you are a cyber genius or a complete novice, CompSoc is for everyone.
                           form.form-group
                               input.form-control(type="text" placeholder="Name")
                               input.form-control(type="text" placeholder="Email")
@@ -49,9 +50,11 @@ html(lang="en")
                               button.btn.btn-success(type="submit") Register
                       div.col-md-3
                           h2 Drop us a mail
+                          p
                           p compsoc@durham.ac.uk
                       div.col-md-3
-                          h2 We're social !
+                          h2 Social Network
+                          p
                           p Like us on <a href = "https://www.facebook.com/DurhamCompsoc/?fref=ts">Facebook </a>
                           p Follow Us on Twitter
                       div.col-md-3
