--- a/views/about.pug
+++ b/views/about.pug
@@ -40,9 +40,9 @@ html(lang="en")
           div.row
             div.col-md-6
             //description
-              p We’re Durham University’s Computing Society – run entirely by students. The university might be very old,
-                but we’re young ! And we look for passionate problem solvers to come together, do stuff and participate in
-                really cool hack-a-thons and tech-events all the year round. Click around to know more about us.
+              p We are Durham University’s Computing Society – run entirely by students. We look for passionate problem solvers to come together, make stuff and participate in
+                hack-a-thons and tech-events all the year round. 
+              p Click around to know more about us.
 
               //images carousel (next to the description)
             div.col-md-6
