Navigation work in progress

--- a/views/partials/head.pug
+++ b/views/partials/head.pug
@@ -9,5 +9,6 @@ mixin head(title)
         title= "DU CompSoc - " + title
         //- Bootstrap
         link(href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet")
+        link(href="/font-awesome/css/font-awesome.min.css" rel="stylesheet")
         link(href="/indexStyle.css" rel="stylesheet")
-        link(href="https://fonts.googleapis.com/css?family=Jura:400,600|Raleway" rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css?family=Jura:400,600|Raleway:400,600" rel="stylesheet")
