--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -10,7 +10,74 @@ object {
     width: 100%;
 }
 
-.navbar-brand {
+.navigation {
+    height: 50px;
+    background-color: #2c2c2c;
+    display: flex;
+    display: -webkit-flex;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+}
+
+.navigation-brand {
+    font-family: 'Jura', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    color: #eee;
+    flex-basis: 334px;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+}
+
+.navigation-links {
+    flex: 0 420px;
+    display: flex;
+    display: -webkit-flex;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    color: snow;
+    list-style: none;
+    justify-content: space-between;
+    -webkit-justify-content: space-between;
+    align-items: center;
+    -webkit-align-items: center;
+    margin-bottom: 0;
+    padding-left: 0;
+    margin-left: auto;
+    margin-right: 0.5em;
+}
+
+.navigation-link {
+
+}
+
+.navigation-logo {
+    display: none;
+    width: 45px;
+    flex: 0 45px;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+}
+
+.navigation-mobile-text {
+    display: none;
+    flex: auto;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    font-family: 'Jura', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    color: #eee;
+    text-align: center;
+}
+
+.navigation-expand-links > i {
+    padding: 0.5em;
+    font-size: x-large;
+}
+
+/*.navbar-brand {
     font-family: 'Jura', sans-serif;
     font-weight: 600;
     padding: 15px .5em;
@@ -21,8 +88,17 @@ object {
 }
 
 .navbar.navbar-inverse.navbar-fixed-top {
-    position: relative;
-    margin-bottom: 0px;
+     position: relative;
+     margin-bottom: 0px;
+     border-bottom-width: 0px;
+}
+
+.nav.navbar-nav {
+    font-weight: 600;
+}*/
+
+.fa {
+    color: #95c5cd;
 }
 
 .jumbotron {
@@ -35,19 +111,11 @@ object {
     height: 3em;
 }
 
-/* Specific stylings for large screens */
-@media (min-width: 768px) {
-    .navbar-form .form-control {
-        margin-right: 0.5em;
-        margin-bottom: 0em;
-    }
-}
-
-@media (max-width: 426px) {
+@media (max-width: 844px) {
     .banner-container {
         position: relative;
         overflow: hidden;
-        height: 140px;
+        height: 130px;
     }
     .banner {
         position: absolute;
@@ -56,8 +124,20 @@ object {
         left: -9999px;
         right: -9999px;
         margin: auto;
-        height: 200px;
+        height: 270px;
         width: auto;
+    }
+    .navigation-brand {
+        display: none;
+    }
+    .navigation-logo {
+        display: block;
+    }
+    .navigation-links {
+        display: none;
+    }
+    .navigation-mobile-text {
+        display: block;
     }
 }
 
