--- a/views/index.pug
+++ b/views/index.pug
@@ -89,3 +89,4 @@ html(lang="en")
 
         //- Include all compiled plugins (below), or include individual files as needed
         script(src="/bootstrap/dist/js/bootstrap.min.js")
+        script(src="/js/index.js")
