--- a/views/about.pug
+++ b/views/about.pug
@@ -1,6 +1,7 @@
 //about page
 //created by Soumya on 30-08-2016
 include ./partials/head.pug
+include ./partials/nav.pug
 
 doctype html
 html(lang="en")
@@ -12,22 +13,7 @@ html(lang="en")
         //content wrapped for sticky footer
         .wrapper
 
-            nav.navbar.navbar-inverse.navbar-fixed-top
-                .container
-                    .navbar-header
-                        button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#navbar"
-                        aria-expanded="false" aria-controls="navbar")
-                            span.sr-only Toggle navigation
-                            span.icon-bar
-                            span.icon-bar
-                            span.icon-bar
-                        a.navbar-brand(href="#") Durham University CompSoc
-                    div#navbar.navbar-collapse.collapse
-                        form.navbar-form.navbar-right
-                            div.form-group
-                                input.form-control(type="text" placeholder="Email")
-                                input.form-control(type="password" placeholder="Password")
-                                button.btn.btn-success(type="submit") Sign in
+            +nav
 
 
             // Main jumbotron
