--- a/views/events.pug
+++ b/views/events.pug
@@ -2,6 +2,7 @@
 
 //- See head.pug for css imports etc.
 include ./partials/head.pug
+include ./partials/nav.pug
 
 doctype(html)
 html(lang="en")
@@ -12,23 +13,8 @@ html(lang="en")
         //- content wrapped for sticky footer
         .wrapper
 
-            nav.navbar.navbar-inverse.navbar-fixed-top
-              .container
-                .navbar-header
-                    button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar")
-                        span.sr-only Toggle navigation
-                        span.icon-bar
-                        span.icon-bar
-                        span.icon-bar
-                    a.navbar-brand(href="#") Durham University CompSoc
+            +nav
 
-                div#navbar.navbar-collapse.collapse
-                    form.navbar-form.navbar-right
-                        div.form-group
-                            input.form-control(type="text" placeholder="Email")
-                            input.form-control(type="text" placeholder="Password")
-                            button.btn.btn-success(type="submit") Sign in
             //- main jumbotron
             div.jumbotron
                 div.container
