--- a/views/index.pug
+++ b/views/index.pug
@@ -21,12 +21,12 @@ html(lang="en")
             .banner-container
                 object.banner(data="../img/newiconbanner1.svg" type="image/svg+xml")
 
-                 //-div.container
-                 //-    h1 Hello, world!
-                 //-    p Welcome to the Durham University Computing Society.
-                 //-    p
-                 //-       a.btn.btn-primary.btn-lg(href="#" role="button") Learn more &raquo;
-
+            .jumbotron.banner-jumbotron
+                .panel.panel-default
+                    .panel-body
+                        h2 Do you love technology? Programming? Or just want to learn something new?
+                        h3 CompSoc runs talks, hackathons and workshops for its members throughout the year -- all with free pizza courtesy of ScottLogic!
+                        h3 Join today to be notified of upcoming events.
 
 
             div.container
