Changes to reflect compsoc.io at this point in time

--- a/public/indexStyle.css
+++ b/public/indexStyle.css
@@ -101,3 +101,7 @@ html, body {
 .push {
     height: 3em; /* .push must be the same height as .footer */
 }
+
+.hiredGradButton {
+    text-align: center;
+}
