Moved navbar buttons onto a new row in index.pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -38,28 +38,42 @@ html(lang="en")
                     div.col-md-3
                         h2 The Team
                         p Click to know the Who's Who of CompSoc.
-                        p
-                            a.btn.btn-default(href="#" role="button") View details &raquo;
+                        
 
                     div.col-md-3
                         h2 What's On
                         p Click to know what's happening in CompSoc, our past events and upcoming events.
-                        p
-                            a.btn.btn-default(href="#" role="button") View details &raquo;
+                        
 
                     div.col-md-3
                         h2 Our Sponsors
                         p They help us run smoothly and happily :) Click to know more.
-                        p
-                            a.btn.btn-default(href="#" role="button") View details &raquo;
+                        
 
                     div.col-md-3
                         h2 Say Hi To Us!
                         p.
                             Click to get in touch with us by email, social media or leave your valuable feedback and
                             suggestions.
+                        
+
+                div.row
+                    div.col-md-3
                         p
                             a.btn.btn-default(href="#" role="button") View details &raquo;
+
+                    div.col-md-3
+                        p
+                            a.btn.btn-default(href="#" role="button") View details &raquo;
+
+                    div.col-md-3
+                        p
+                            a.btn.btn-default(href="#" role="button") View details &raquo;
+
+                    div.col-md-3
+                        p
+                            a.btn.btn-default(href="#" role="button") View details &raquo;
+
 
             //- http://stackoverflow.com/questions/42294/how-do-you-get-the-footer-to-stay-at-the-bottom-of-a-web-page?noredirect=1&lq=1
             .push
