Changed naming to reduce ambiguity and added another template to better model the inheritance hierarchy.

--- a/views/about.pug
+++ b/views/about.pug
@@ -1,16 +1,16 @@
 //- about page
 //- created by Soumya on 30-08-2016
 
-extends templates/base.pug
-
-block title
-    title About - DUCompSoc
+extends templates/standard.pug
 
 block head
+    title About - DUCompSoc
+
+block title
     h1 About Us
     p Let us introduce ourselves
 
-block body
+block content
     div.row
         div.col-md-6
             br
