--- a/views/contact.pug
+++ b/views/contact.pug
@@ -1,16 +1,16 @@
 //- Created by Soumya on 01-09-2016
 
-extends templates/base.pug
-
-block title
-    title Contact Us - DUCompSoc
+extends templates/standard.pug
 
 block head
+    title Contact Us - DUCompSoc
+
+block title
     h1 Say Hi To Us!
     p Wanna join us? Welcome, with open arms :)
     p Like Us? Have any valuable suggestions? We're all ears!
 
-block body
+block content
     //- row contains four columns, each with a description
     div.row
         div.col-md-3
