--- a/views/events.pug
+++ b/views/events.pug
@@ -1,16 +1,16 @@
 //- Created by Soumya on 01-09-2016
 
-extends templates/base.pug
-
-block title
-    title Events - DUCompSoc
+extends templates/standard.pug
 
 block head
+    title Events - DUCompSoc
+
+block title
     h1 What's On
     p We feature tech-events all the year round, from tech-talks to hackathons. So you can have a glimpse inside the life of a techie or meet new people and build some awesome stuff.
     p Take a look at what we've done so far and what's coming in.
 
-block body
+block content
     //- row contains two columns, each with a description
     div.row
         div.col-md-6
