--- a/views/index.pug
+++ b/views/index.pug
@@ -3,10 +3,10 @@
 
 extends templates/marginals.pug
 
-block title
+block head
     title Homepage - DU CompSoc
     
-block content
+block body
     //- Main jumbotron for a primary marketing message or call to action
     .banner-container
         object.banner(data="../img/newiconbanner1.svg" type="image/svg+xml")
