--- a/views/sponsors.pug
+++ b/views/sponsors.pug
@@ -1,15 +1,15 @@
 //- Created by Soumya on 01-09-2016
 
-extends templates/base.pug
-
-block title
-    title Sponsors - DUCompSoc
+extends templates/standard.pug
 
 block head
+    title Sponsors - DUCompSoc
+
+block title
     h1 Our Sponsors
     p Here's a big thank you to all who help us grow :)
 
-block body
+block content
     //- contains pictures of our sponsors which act as links to their official websites.
     div.row
         h2 Meet our sponsors
