--- a/views/team.pug
+++ b/views/team.pug
@@ -1,15 +1,15 @@
 //- Created by Soumya on 01-09-2016
 
-extends templates/base.pug
-
-block title
-    title The Team - DUCompSoc
+extends templates/standard.pug
 
 block head
+    title The Team - DUCompSoc
+
+block title
     h1 The Team
     p Have a look at the students who help keep the society in shape.
 
-block body
+block content
     div.row
         div.col-md-3
             h2 The President
