--- a/views/team.pug
+++ b/views/team.pug
@@ -13,13 +13,13 @@ block content
     div.row
         div.col-md-3
             h2 The President
-            p description
+            p Alistair Madden manages everything and ensures that Compsoc runs smoothly.
         div.col-md-3
             h2 The Secretary
-            p description
+            p Mitchel Starkie takes care of all the sponsors, contracts and paperwork etc.
         div.col-md-3
             h2 The Treasurer
-            p description
+            p Sara Chen looks after the financial matters of Compsoc.
         div.col-md-3
             h2 The Web Officer
-            p description
+            p Soumya Singh manages the website, the regular updates and the technical side of the society.
